<resources>
    <string name="app_name">MagneticDB</string>
    <string name="title_activity_picture">Take a picture</string>
    <string name="title_activity_export">Export data</string>
    <string name="title_activity_heat">Collected Data</string>
    <string name="title_absMagneticField">Absolute MF (nT):</string>
    <string name="title_relMagneticField">Relatif MF (nT):</string>
    <string name="title_absLinearAcce">Absolute LA:</string>
    <string name="title_relLinearAcce">Relatif LA:</string>
    <string name="title_gravity">Gravity:</string>
    <string name="title_gps">GPS:</string>
    <string name="title_x">X: %1$s</string>
    <string name="title_y">Y: %1$s</string>
    <string name="title_z">Z: %1$s</string>
    <string name="title_lat">Lat: %1$s</string>
    <string name="title_lon">Lon: %1$s</string>
    <string name="title_alt">Alt: %1$s</string>
    <string name="title_acc">Acc: %1$s</string>
    <string name="title_listMeasurement">List measurements:</string>
    <string name="title_folder">Folder where store the session:</string>
    <string name="title_exportationFolder">Exportation folder:</string>
    <string name="title_pickFolder">&#8230;</string>
    <string name="title_fileName">File name:</string>
    <string name="title_sessionName">Session name:</string>
    <string name="title_dateFormat">Date format:</string>
    <string name="title_timeGPS">Time between GPS measurement (ms):</string>
    <string name="title_settingsSession">Session Settings:</string>
    <string name="title_settingsRecord">Record Settings:</string>
    <string name="title_settingsExport">Export Settings:</string>
    <string name="menu_play">Start record</string>
    <string name="menu_stop">Stop record</string>
    <string name="menu_gps">GPS and Wifi</string>
    <string name="menu_wifi">Wifi only</string>
    <string name="menu_picture">Take a picture</string>
    <string name="menu_all">Show all</string>
    <string name="menu_maps">Show only the map</string>
    <string name="menu_list">Show only the list</string>
    <string name="menu_delete">Delete all the measurements</string>
    <string name="menu_export">Export data</string>
    <string name="menu_heat">See collected data</string>
    <string name="menu_norm">See the norm of magnetic field</string>
    <string name="menu_x">See the x axe of magnetic field</string>
    <string name="menu_y">See the y axe of magnetic field</string>
    <string name="menu_z">See the z axe of magnetic field</string>
    <string name="menu_center">Centrer la vue</string>
    <string name="menu_bounds">Actualiser la vue</string>
    <string name="menu_interpolation">Interpolation</string>
    <string name="menu_save">Save</string>
    <string name="inter_raw">RAW (No interpolation)</string>
    <string name="inter_nn">NN (Nearest neighbor)</string>
    <string name="inter_lin">Lin (Linear)</string>
    <string name="inter_inv">Inv (Inverse of distances)</string>
    <string name="inter_spl">Spl (Spline)</string>
    <string name="text_sendServer">Send the data on the phone to the server.</string>
    <string name="apiKey">AIzaSyAhx4zWd9KoasTM44AXf_GnuchLe6haDXo</string>
    <string name="back">Back</string>
    <string name="sendDataEmail">Send data by email</string>
    <string name="provider_enabled">The provider %s is now enabled</string>
    <string name="provider_disabled">The provider %s is now disabled</string>
    <string name="new_location">New Location : Latitude = %1$s, Longitude = %2$s, Altitude = %3$s; Accuracy: %4$s m</string>
    <string name="use_gps">Use GPS and Wifi.</string>
    <string name="use_wifiOnly">Use Wifi only.</string>
    <string name="recordingStop">Stop the recording session.</string>
    <string name="recordingPlay">Start the recording session.</string>
    <string name="impossible_getLatlon">Unable getting GPS coordinates : %s</string>
    <string name="impossible_setLatlon">Unable setting GPS coordinates : %s</string>
    <string name="impossible_parserJSON">Unable to parse JSON data : %s</string>
    <string name="impossible_setJSON">Unable to generate JSON data : %s</string>
    <string name="impossible_getJSON">Unable to get JSON data : %s</string>
    <string name="error_dataNotExported">Unable to export data!</string>
    <string name="done_dataExported">Data exported!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>