<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_record"
        android:icon="@drawable/ic_all"
        android:showAsAction="always"
        android:title="@string/menu_record" >

        <menu>
            <group android:id="@+id/menu_group_record">

                <item
                    android:id="@+id/menu_play"
                    android:icon="@drawable/ic_play"
                    android:title="@string/menu_play"/>

                <item
                    android:id="@+id/menu_stop"
                    android:icon="@drawable/ic_stop"
                    android:title="@string/menu_stop"/>

                <item
                    android:id="@+id/menu_spot"
                    android:icon="@drawable/ic_spot"
                    android:title="@string/menu_spot"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_picture"
        android:icon="@drawable/ic_picture"
        android:showAsAction="always"
        android:title="@string/menu_picture"/>

    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/ic_all"
        android:showAsAction="always"
        android:title="@string/menu_all" >

        <menu>
            <group android:id="@+id/menu_group_show">
                <item
                    android:id="@+id/menu_all"
                    android:icon="@drawable/ic_all"
                    android:title="@string/menu_all" />

                <item
                    android:id="@+id/menu_maps"
                    android:icon="@drawable/ic_maps"
                    android:title="@string/menu_maps"/>

                <item
                    android:id="@+id/menu_list"
                    android:icon="@drawable/ic_list"
                    android:title="@string/menu_list"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_gps"
        android:icon="@drawable/ic_gps"
        android:showAsAction="always"
        android:title="@string/menu_gps"/>

    <item
        android:id="@+id/menu_wifi"
        android:icon="@drawable/ic_wifi"
        android:showAsAction="always"
        android:title="@string/menu_wifi"/>

    <item
        android:id="@+id/menu_del"
        android:icon="@drawable/ic_delete"
        android:showAsAction="never"
        android:title="@string/menu_delete"/>

    <item
        android:id="@+id/menu_heat"
        android:showAsAction="never"
        android:title="@string/menu_heat"/>

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_sync"
        android:showAsAction="ifRoom"
        android:title="@string/menu_export"/>

    <item
        android:id="@+id/menu_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>